# epicurus

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  Taskfile.yml  compose.yaml  conftest.py  mkdocs.yml  pyproject.toml
libs/epicurus-core/: README.md  pyproject.toml
libs/epicurus-core/src/epicurus_core/: __init__.py  _version.py  config.py  contracts.py  db.py  events.py  files.py  logging.py  manifest.py  messaging.py  module.py  module_events.py  observability.py  platform_client.py  redaction.py  review.py  routing.py  secret_store.py  tenancy.py  tracing.py
libs/epicurus-core/tests/: conftest.py  test_config.py  test_contracts.py  test_db.py  test_events.py  test_events_auth.py  test_files.py  test_logging.py  test_manifest.py  test_manifest_automations.py  test_messaging.py  test_module.py  test_module_events.py  test_observability.py  test_platform_client.py  test_redaction.py  test_review.py  test_routing.py  test_secret_store.py  test_tenancy.py  test_tracing.py  test_version.py
services/calendar/: Dockerfile  compose.yaml  pyproject.toml
services/calendar/src/epicurus_calendar/: __init__.py  __main__.py  app.py  db.py  lead_time_prefs.py  models.py  recurrence.py  scheduler.py  service.py  settings.py
services/calendar/tests/: test_calendar_app.py  test_calendar_events.py  test_google_collections.py  test_google_meet.py  test_google_recurrence.py  test_google_timezone.py  test_local_provider.py  test_models.py  test_recurrence.py  test_recurrence_split.py  test_resolver_attachments.py  test_service.py
services/core-app/: Dockerfile  README.md  compose.docker-socket.yaml  compose.yaml  docker-entrypoint.py  pyproject.toml
services/core-app/src/epicurus_core_app/: __init__.py  __main__.py  app.py  core_events.py  core_review.py  docker_control.py  event_log.py  event_log_routes.py  file_index.py  file_scan.py  file_watch.py  files_routes.py  log_stream.py  log_stream_routes.py  maintenance.py  maintenance_routes.py  maintenance_schedule_prefs.py  module_prefs.py  modules.py  notifications.py  notifications_routes.py  object_backend.py  page_order_prefs.py  page_order_routes.py  platform_api.py  readiness.py  scheduled_turns.py  scheduled_turns_routes.py  scheduling.py  settings.py  system_info.py  timezone_prefs.py  timezone_routes.py  upload_limits.py
services/core-app/tests/: test_activity.py  test_agent.py  test_agent_routes.py  test_agent_stream.py  test_attachments.py  test_automations_dial.py  test_automations_feed.py  test_automations_model.py  test_automations_review.py  test_automations_routes.py  test_automations_runner.py  test_automations_sinks.py  test_automations_update.py  test_builtins.py  test_catalog.py  test_compaction.py  test_core_app_lifespan.py  test_core_events.py  test_docker_control.py  test_epicurus_core_app.py  test_event_log.py  test_event_log_routes.py  test_event_spine_integration.py  test_extraction.py  test_extraction_queue.py  test_extraction_runner.py  test_facts.py  test_file_index.py  test_file_scan.py  test_files_routes.py  test_files_ui.py  test_instructions.py  test_instructions_routes.py  test_live_runs.py  test_llm_gateway.py  test_llm_prefs.py  test_llm_providers.py  test_llm_routes.py  test_log_stream.py  test_maintenance.py  (+46 more)
services/echo/: Dockerfile  README.md  compose.yaml  pyproject.toml
services/echo/src/epicurus_echo/: __init__.py  __main__.py  app.py  service.py
services/echo/tests/: test_echo.py  test_echo_app.py  test_echo_events.py  test_echo_spine.py
services/knowledge/: Dockerfile  README.md  compose.yaml  pyproject.toml
services/knowledge/src/epicurus_knowledge/: __init__.py  __main__.py  app.py  attachments.py  chunker.py  db.py  events.py  indexer.py  module_docs.py  pages.py  reader.py  refs.py  resolver.py  runner.py  service.py  settings.py  suggestions.py  watcher.py
services/knowledge/tests/: test_attachments.py  test_chunker.py  test_db.py  test_events.py  test_file_tree.py  test_indexer.py  test_knowledge_app.py  test_module_docs.py  test_pages.py  test_reader.py  test_refs.py  test_resolver.py  test_runner.py  test_service.py  test_suggestions.py  test_versions.py  test_watcher.py
services/mail/: Dockerfile  README.md  compose.yaml  pyproject.toml
services/mail/src/epicurus_mail/: __init__.py  __main__.py  app.py  cache.py  db.py  gmail.py  provider.py  service.py  settings.py
services/mail/tests/: test_app.py  test_gmail.py  test_gmail_html.py  test_gmail_sync.py  test_mail_cache.py  test_mail_db.py  test_service.py
services/messaging/: Dockerfile  README.md  compose.yaml  pyproject.toml
services/messaging/src/epicurus_messaging/: __init__.py  __main__.py  app.py  discord_provider.py  loopback_provider.py  (+5 more)
services/messaging/tests/: test_messaging.py  test_messaging_app.py  test_telegram.py
services/notes/: Dockerfile  README.md  compose.yaml  pyproject.toml
services/notes/tests/: test_attachments.py  test_chunker.py  test_db.py  test_events.py  test_indexer.py  test_mirror.py  test_notes_suggestions.py  test_pages.py  test_service.py
services/storage/: Dockerfile  README.md  compose.yaml  pyproject.toml
services/storage/tests/: test_storage.py  test_storage_app.py  test_storage_delete.py  test_storage_download.py  test_storage_ingest.py  test_storage_move.py  test_storage_objects.py  test_watcher.py
services/tasks/: Dockerfile  README.md  compose.yaml  pyproject.toml
services/tasks/tests/: test_board.py  test_db_reconcile.py  test_google_provider.py  test_google_recurrence.py  test_local_provider.py  test_recurrence.py  test_resolver_attachments.py  test_router_recurrence.py  test_service.py  test_tasks_app.py  test_tasks_events.py
services/websearch/: Dockerfile  README.md  compose.yaml  pyproject.toml
services/websearch/tests/: test_app.py  test_refs.py  test_searxng.py  test_service.py
templates/service-template/{{cookiecutter.service_slug}}/: Dockerfile  README.md  compose.yaml  pyproject.toml
(+400 files in other folders)
