# Root of the epicurus uv workspace.
#
# This root is a *virtual* project (package = false): it is not built or
# published. It exists to pin shared dev tooling and tool config for every
# workspace member, and to declare which members make up the monorepo.
#
# Add new packages under libs/ (shared) or services/ (deployable modules); the
# member globs below auto-discover them.

[project]
name = "epicurus"
version = "0.0.0"
description = "Self-hosted, modular, local-first personal-assistant platform."
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["libs/*", "services/*"]
# services/web is the Node/TypeScript web shell — not a Python package.
exclude = ["services/web"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "testcontainers[minio]>=4.8",
    "cookiecutter>=2.5",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["libs", "services"]
# Cookiecutter templates contain Jinja, not valid Python — don't lint them.
extend-exclude = ["templates"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["epicurus_core", "epicurus_core_app", "epicurus_echo", "epicurus_storage", "epicurus_knowledge", "epicurus_websearch", "epicurus_calendar", "epicurus_mail"]

[tool.mypy]
strict = true
python_version = "3.11"
pretty = true
# The single source of truth for what gets type-checked: `uv run mypy` (no
# args) reads this. Register every new workspace package here (and in ruff's
# known-first-party above).
packages = ["epicurus_core", "epicurus_core_app", "epicurus_echo", "epicurus_storage", "epicurus_knowledge", "epicurus_websearch", "epicurus_calendar", "epicurus_mail"]

# Third-party packages without a py.typed marker; don't fail strict on them.
[[tool.mypy.overrides]]
module = ["prometheus_client.*", "nats.*", "hvac.*", "litellm.*", "qdrant_client.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aioboto3.*", "aiobotocore.*", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["libs", "services", "tests"]
# importlib mode: modules across services can share a test filename (e.g. several
# test_service.py) without colliding — no tests/__init__.py needed or wanted.
addopts = "-q --import-mode=importlib"
markers = [
    "integration: requires Docker (spins ephemeral containers via testcontainers)",
]
