# Root of the epicurus uv workspace.
#
# This root is a *virtual* project (package = false): it is not built or
# published. It exists to pin shared dev tooling and tool config for every
# workspace member, and to declare which members make up the monorepo.
#
# Add new packages under libs/ (shared) or services/ (deployable modules); the
# member globs below auto-discover them.

[project]
name = "epicurus"
version = "0.0.0"
description = "Self-hosted, modular, local-first personal-assistant platform."
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["libs/*", "services/*"]
# services/web is the Node/TypeScript web shell — not a Python package.
exclude = ["services/web"]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "mypy>=1.13",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "testcontainers[minio]>=4.14.2",
    "cookiecutter>=2.5",
    "pre-commit>=4.0",
    "types-python-dateutil>=2.9.0.20260518",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["libs", "services"]
# Cookiecutter templates contain Jinja, not valid Python — don't lint them.
extend-exclude = ["templates"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["epicurus_core", "epicurus_core_app", "epicurus_echo", "epicurus_storage", "epicurus_knowledge", "epicurus_websearch", "epicurus_calendar", "epicurus_mail", "epicurus_tasks", "epicurus_notes", "epicurus_messaging"]

[tool.mypy]
strict = true
python_version = "3.11"
pretty = true
# The single source of truth for what gets type-checked: `uv run mypy` (no
# args) reads this. Register every new workspace package here (and in ruff's
# known-first-party above).
packages = ["epicurus_core", "epicurus_core_app", "epicurus_echo", "epicurus_storage", "epicurus_knowledge", "epicurus_websearch", "epicurus_calendar", "epicurus_mail", "epicurus_tasks", "epicurus_notes", "epicurus_messaging"]

# Third-party packages without a py.typed marker; don't fail strict on them.
[[tool.mypy.overrides]]
module = ["prometheus_client.*", "nats.*", "hvac.*", "litellm.*", "qdrant_client.*", "docker.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aioboto3.*", "aiobotocore.*", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["libs", "services", "tests"]
# importlib mode: modules across services can share a test filename (e.g. several
# test_service.py) without colliding — no tests/__init__.py needed or wanted.
addopts = "-q --import-mode=importlib"
# Per-test deadline: a deadlocked async test (e.g. an await inside `except
# CancelledError`, or a task cancelled before its first step — see AGENTS.md)
# fails with a dumped stack instead of hanging the gate. Healthy tests run in
# well under a second, so 60s only ever trips a genuine hang. `thread` is the
# only portable method (signal/SIGALRM is POSIX-only; dev runs on Windows).
# Integration tests boot testcontainers — a cold image pull can exceed this — so
# conftest.py lifts their budget (they carry no per-test `@timeout` of their own).
timeout = 60
timeout_method = "thread"
markers = [
    "integration: requires Docker (spins ephemeral containers via testcontainers)",
]
