[project]
name = "epicurus-core"
version = "0.9.0"
description = "Shared contract and runtime for epicurus services."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "fastapi>=0.115",
    "prometheus-client>=0.21",
    "nats-py>=2.6",
    "mcp>=1.2",
    "hvac>=2.1",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epicurus_core"]
