[project]
name = "epicurus-core"
version = "0.16.0"
description = "Shared contract and runtime for epicurus services."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "fastapi>=0.138.2",
    "prometheus-client>=0.21",
    "nats-py>=2.6",
    "mcp>=1.2",
    "hvac>=2.1",
    "httpx>=0.27",
]

# The S3 FileStore backend (epicurus_core.files.S3FileStore) needs aioboto3. It is an
# optional extra so the shared library stays lean: the local-filesystem backend — the
# self-host default — has no S3 dependency. Install `epicurus-core[s3]` to use the S3 backend.
[project.optional-dependencies]
s3 = ["aioboto3>=13.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epicurus_core"]
