[project]
name = "epicurus-core"
version = "0.21.0"
description = "Shared contract and runtime for epicurus services."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "fastapi>=0.138.2",
    "prometheus-client>=0.21",
    "nats-py>=2.6",
    "mcp>=1.2",
    "hvac>=2.1",
    "httpx>=0.27",
    # OpenTelemetry tracing (epicurus_core.tracing, #57). Core — not an optional extra —
    # so every service traces out of the box once OTEL_TRACES_ENABLED is set; it is a
    # runtime no-op (no provider, no exporter) when disabled, which is the default. The
    # OTLP/HTTP exporter is deliberate: it avoids the heavy native `grpcio` dependency the
    # gRPC exporter pulls in (Tempo accepts OTLP over HTTP on :4318 all the same).
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
]

# The S3 FileStore backend (epicurus_core.files.S3FileStore) needs aioboto3. It is an
# optional extra so the shared library stays lean: the local-filesystem backend — the
# self-host default — has no S3 dependency. Install `epicurus-core[s3]` to use the S3 backend.
#
# The additive schema reconcile (epicurus_core.db.ensure_columns) needs SQLAlchemy. It is
# likewise an optional extra so a module without a database carries no ORM dependency; the
# `db` submodule is deliberately not imported by `epicurus_core/__init__`. Install
# `epicurus-core[db]` — every store-owning service already depends on SQLAlchemy directly.
[project.optional-dependencies]
s3 = ["aioboto3>=13.0"]
db = ["sqlalchemy>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epicurus_core"]
