[project]
name = "epicurus-calendar"
version = "0.10.2"
description = "Calendar module — provider-neutral calendar capability (local + Google)."
requires-python = ">=3.11"
dependencies = [
    "epicurus-core",
    "fastapi>=0.138.2",
    "uvicorn[standard]>=0.49.0",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epicurus_calendar"]

[tool.uv.sources]
epicurus-core = { workspace = true }
