[project]
name = "epicurus-core-app"
version = "0.1.0"
description = "The epicurus core runtime: hosts the agent loop, LLM gateway, memory, power states, and the module-facing platform API."
requires-python = ">=3.11"
dependencies = [
    "epicurus-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "litellm>=1.50",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epicurus_core_app"]

[tool.uv.sources]
epicurus-core = { workspace = true }
