[project]
name = "epicurus-core-app"
version = "0.62.0"
description = "The epicurus core runtime: hosts the agent loop, LLM gateway, memory, power states, and the module-facing platform API."
requires-python = ">=3.11"
dependencies = [
    "epicurus-core",
    "fastapi>=0.138.2",
    # FastAPI needs python-multipart for UploadFile (the chat attachment upload, ADR-0019).
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.49.0",
    "litellm>=1.50",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.29",
    "qdrant-client>=1.18.0,<1.19",
    # Confirmed module removal (#127): the core stops/removes a module's own container via
    # the Docker socket through a tightly-scoped controller (ADR-0028).
    "docker>=7.0",
    # IANA timezone database for zoneinfo (the `now` tool, ADR-0039) — so timezone lookups
    # work on hosts without a system tz database (Windows dev, minimal images).
    "tzdata>=2024.1",
    # The core owns the file space (ADR-0052); aioboto3 powers the S3 FileStore backend so the
    # operator can select it (FILES_BACKEND=s3) with no separate install. Local FS is default.
    "aioboto3>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epicurus_core_app"]

[tool.uv.sources]
epicurus-core = { workspace = true }
