[project]
name = "epicurus-knowledge"
version = "0.4.0"
description = "Knowledge module — incremental Obsidian vault index + RAG via Qdrant."
requires-python = ">=3.11"
dependencies = [
    "epicurus-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "qdrant-client>=1.12,<1.13",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epicurus_knowledge"]

[tool.uv.sources]
epicurus-core = { workspace = true }
