[project]
name = "epicurus-knowledge"
version = "0.22.0"
description = "Knowledge module — multi-project Obsidian vault index + RAG via Qdrant."
requires-python = ">=3.11"
dependencies = [
    "epicurus-core",
    "fastapi>=0.138.2",
    "uvicorn[standard]>=0.49.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.29",
    "qdrant-client>=1.18.0,<1.19",
    "httpx>=0.27",
    # Vault file-watcher for live re-index on external change (#232). Already present
    # transitively via uvicorn[standard]; declared directly because we import it.
    "watchfiles>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epicurus_knowledge"]

[tool.uv.sources]
epicurus-core = { workspace = true }
