[project]
name = "epicurus-mail"
version = "0.5.0"
description = "Mail module — provider-agnostic mail (Gmail v0.1): search, read, and send."
requires-python = ">=3.11"
dependencies = [
    "epicurus-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epicurus_mail"]

[tool.uv.sources]
epicurus-core = { workspace = true }
