[project]
name = "epicurus-mail"
version = "0.13.0"
description = "Mail module — provider-agnostic mail (Gmail v0.1): search, read, draft-first send/reply, mark read/unread, local cache + incremental sync."
requires-python = ">=3.11"
dependencies = [
    "epicurus-core",
    "fastapi>=0.138.2",
    "uvicorn[standard]>=0.49.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.29",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epicurus_mail"]

[tool.uv.sources]
epicurus-core = { workspace = true }
