[project]
name = "epicurus-messaging"
version = "0.1.0"
description = "An epicurus module."
requires-python = ">=3.11"
dependencies = [
    "epicurus-core",
    "fastapi>=0.138.2",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epicurus_messaging"]

[tool.uv.sources]
epicurus-core = { workspace = true }
