[project]
name = "epicurus-notes"
version = "0.9.1"
description = "Notes module — author Obsidian-style notes into a private, attach-only RAG collection."
requires-python = ">=3.11"
dependencies = [
    "epicurus-core",
    "fastapi>=0.138.2",
    "uvicorn[standard]>=0.49.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.29",
    "qdrant-client>=1.18.0,<1.19",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epicurus_notes"]

[tool.uv.sources]
epicurus-core = { workspace = true }
