[project]
name = "epicurus-storage"
version = "0.2.0"
description = "Storage module — file-tree index, agent file tools, and MinIO object store."
requires-python = ">=3.11"
dependencies = [
    "epicurus-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.50",
    "asyncpg>=0.29",
    "aioboto3>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epicurus_storage"]

[tool.uv.sources]
epicurus-core = { workspace = true }
