[project]
name = "epicurus-storage"
version = "0.7.0"
description = "Storage module — file-tree index, agent file tools, MinIO object store, upload ingest, and inline text read."
requires-python = ">=3.11"
dependencies = [
    "epicurus-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.50",
    "asyncpg>=0.29",
    "aioboto3>=13.0",
    # Files-tree watcher for live rescan on external change (#390). Already present
    # transitively via uvicorn[standard]; declared directly because we import it.
    "watchfiles>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epicurus_storage"]

[tool.uv.sources]
epicurus-core = { workspace = true }
