[project]
name = "epicurus-tasks"
version = "0.11.0"
description = "Tasks module — provider-neutral task management (Google Tasks + local store)."
requires-python = ">=3.11"
dependencies = [
    "epicurus-core",
    "fastapi>=0.138.2",
    "uvicorn[standard]>=0.49.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.29",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epicurus_tasks"]

[tool.uv.sources]
epicurus-core = { workspace = true }
