[project]
name = "epicurus-websearch"
version = "0.1.0"
description = "Web-search module — self-hosted SearXNG + web_search MCP tool."
requires-python = ">=3.11"
dependencies = [
    "epicurus-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epicurus_websearch"]

[tool.uv.sources]
epicurus-core = { workspace = true }
