[project]
name = "epicurus-websearch"
version = "0.2.0"
description = "Web-search module — self-hosted SearXNG + web_search MCP tool."
requires-python = ">=3.11"
dependencies = [
    "epicurus-core",
    "fastapi>=0.138.2",
    "uvicorn[standard]>=0.51.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epicurus_websearch"]

[tool.uv.sources]
epicurus-core = { workspace = true }
