[project]
name = "epicurus-{{ cookiecutter.service_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
requires-python = ">=3.11"
dependencies = [
    "epicurus-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.package_name }}"]

[tool.uv.sources]
epicurus-core = { workspace = true }
